collapsing serp bugfix

--- a/public/css/views/serp_trip.less
+++ b/public/css/views/serp_trip.less
@@ -304,5 +304,12 @@
     }
   }
 
+  &.nocollapse {
+    .v-s-t-header {
+      .v-s-t-places {
+        cursor: default;
+      }
+    }
+  }
 
 }
